--- a/SITE TESTE 1/index.html
+++ b/SITE TESTE 1/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slider</title>
+    <title>Slideshow Aprimorado</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="slider">
-        <div class="images">
-            <input type="radio" name="slide" id="img1" checked>
-            <input type="radio" name="slide" id="img2">
-            <input type="radio" name="slide" id="img3">
-            <input type="radio" name="slide" id="img4">
+  <div class="slideshow-container">
+    <img class="mySlides fade" src="img/banner/1.png">
+    <img class="mySlides fade" src="img/banner/2.png">
+    <img class="mySlides fade" src="img/banner/3.png">
+    <img class="mySlides fade" src="img/banner/4.png">
+  </div>
 
-            <img src="img/banner/1.png" class="m1" alt="img1">
-            <img src="img/banner/2.png" class="m2" alt="img2">
-            <img src="img/banner/3.png" class="m3" alt="img3">
-            <img src="img/banner/4.png" class="m4" alt="img4">
-        </div>
-        <div class="dots">
-            <label for="img1"></label>
-            <label for="img2"></label>
-            <label for="img3"></label>
-            <label for="img4"></label>
-        </div>
-    </div>
+  <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
+  <button class="next" onclick="plusSlides(1)">&#10095;</button>
+
+  <script src="./js/script.js"></script>
 </body>
 </html>
