--- a/SITE/index.html
+++ b/SITE/index.html
@@ -27,12 +27,14 @@
   
     <section>
         <!--Slider start-->
-        <div class="slideshow-container">
-            <img class="mySlides fade" src="img/banner/1.png" style="width:100%">
-            <img class="mySlides fade" src="img/banner/2.png" style="width:100%">
-            <img class="mySlides fade" src="img/banner/3.png" style="width:100%">
-            <img class="mySlides fade" src="img/banner/4.png" style="width:100%">
-            <img class="mySlides fade" src="img/banner/5.png" style="width:100%">
+        <div class="slide">
+            <div class="slideshow-container">
+                <img class="mySlides fade" src="img/banner/1.png" style="width:100%">
+                <img class="mySlides fade" src="img/banner/2.png" style="width:100%">
+                <img class="mySlides fade" src="img/banner/3.png" style="width:100%">
+                <img class="mySlides fade" src="img/banner/4.png" style="width:100%">
+                <img class="mySlides fade" src="img/banner/5.png" style="width:100%">
+            </div>
         </div>
         <!--Slide end-->     
 
