--- a/SITE/index.html
+++ b/SITE/index.html
@@ -39,7 +39,14 @@
         <!--Slide end-->     
 
         <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
-        <button class="next" onclick="plusSlides(1)">&#10095;</button>      
+        <button class="next" onclick="plusSlides(1)">&#10095;</button>     
+        
+        <div class="container">
+            <img class="img123" src="img/ISEP.png">
+            <div class="texto">
+                Licenciado em Eng. eletrotécnica de computadores
+            </div>
+        </div>
 
     </section>
 
