--- a/SITE/index.html
+++ b/SITE/index.html
@@ -40,15 +40,26 @@
 
         <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
         <button class="next" onclick="plusSlides(1)">&#10095;</button>     
-        
-        <div class="container">
-            <img class="img123" src="img/ISEP.png">
-            <div class="texto">
-                Licenciado em Eng. eletrotécnica de computadores
-            </div>
+
+        <div class="cont2">
+            <table>
+                <tr>
+                  <th class="con1l1"><img class="img321" src="img/ISEP.png"></th>
+                  <th>Licenciado em Eng. eletrotécnica de computadores</th>
+                </tr>
+                <tr>
+                    <th> <h2>Olá</h2> </th>
+                </tr>
+              </table>
         </div>
+        
+        <div> </div>
 
     </section>
+
+    <div>
+        <h></h>
+    </div>
 
     <footer>
         <p>&copy; 2023 J.V.ELETRO. Todos os direitos reservados.</p>
