--- a/SITE/servi.html
+++ b/SITE/servi.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> J. V. ELETRO </title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles_SV.css">
 </head>
 
 <body>
@@ -20,8 +20,23 @@
             <li><a href="#">Entrar</a></li>
         </ul>
     </nav>
+
     <section>
-        <p>Area de serviço</p>
+
+        <div class="cont2">
+
+            <table>
+                <tr>
+                  <th class="con1l1"> <img class="img321" src="img/ISEP.png"> </th>
+                  <th>Licenciado em Eng. eletrotécnica de computadores</th>
+                </tr>
+                <tr>
+                    <th> <h2>Olá</h2> </th>
+                </tr>
+              </table>
+              
+        </div>
+
     </section>
 
     <footer>
