--- a/SITE/index.html
+++ b/SITE/index.html
@@ -22,46 +22,25 @@
     <!--Menu de navegação end-->
 
   
-    <section>
-          <!--Slider start-->
-        <div class="slider">
-            <!--Slides Start-->
-            <div class="slides"></divclass>
+    <div class="slider">
+        <div class="images">
+            <input type="radio" name="slide" id="img1" checked>
+            <input type="radio" name="slide" id="img2">
+            <input type="radio" name="slide" id="img3">
+            <input type="radio" name="slide" id="img4">
 
-                <!--Butões start-->
-                <input type="radio" name="Bot1" id="bt1">
-                <input type="radio" name="Bot2" id="bt2">
-                <input type="radio" name="Bot3" id="bt3">
-                <input type="radio" name="Bot4" id="bt4">
-                <input type="radio" name="Bot5" id="bt5">
-                <!--Butões end-->
-
-                <!--Slide Start-->
-                <div class="slides frist">
-                    <img src="img/banner/1.png" style="width:100%">
-                </div>
-                <div class="slides">
-                    <img src="img/banner/2.png" style="width:100%">
-                </div>
-                <div class="slides">
-                    <img src="img/banner/3.png" style="width:100%">
-                </div>
-                <div class="slides">
-                    <img src="img/banner/4.png" style="width:100%">
-                </div>
-                <div class="slides">
-                    <img src="img/banner/5.png" style="width:100%">
-                </div>
-                <!--Slide end-->
-
-            </div>
-            <!--slides end-->
-
+            <img src="img/banner/1.png" class="m1" alt="img1">
+            <img src="img/banner/2.png" class="m2" alt="img2">
+            <img src="img/banner/3.png" class="m3" alt="img3">
+            <img src="img/banner/4.png" class="m4" alt="img4">
         </div>
-        <!--Slider start-->
-        
-    </section>
-
+        <div class="dots">
+            <label for="img1"></label>
+            <label for="img2"></label>
+            <label for="img3"></label>
+            <label for="img4"></label>
+        </div>
+    </div>
 
     <footer>
         <p>&copy; 2023 J.V.ELETRO. Todos os direitos reservados.</p>
