--- a/SITE/index.html
+++ b/SITE/index.html
@@ -19,6 +19,7 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="servi.html">Serviços</a></li>
+            <li><a href="calibra.html">Ferramenta</a></li>
             <li><a href="#">Entrar</a></li>
         </ul>
     </nav>
@@ -43,6 +44,8 @@
 
         <div class="cont2">
             <table>
+                <tr class="fristtb">
+                </tr>
                 <tr>
                   <th class="con1l1"><img class="img321" src="img/ISEP.png"></th>
                   <th>Licenciado em Eng. eletrotécnica de computadores</th>
